feat: Implementar DTOs e controladores REST para Área, Perfil e Competência com os respectivos testes unitários.